Fixed social login button colors on dark mode

--- a/src/app/views/signin/Signin.scss
+++ b/src/app/views/signin/Signin.scss
@@ -125,17 +125,18 @@ $loginButtonColor:#063dee;
                 position: relative;
                 .social-login-title{
                     color:$secondaryTextColor;
-                    font-size: 17px;    
+                    font-size: 17px;
                     font-weight: 300;
                 }
                 .social-sign-on-button{
+                    color:$primaryTextColor;
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     border-radius: 3px;
                     box-shadow: 0 1px 0 0 rgba(194, 194, 194, 0.5);
                     border: 0;
-                    margin-top: 0.5em; 
+                    margin-top: 0.5em;
                     &:first-child{
                         margin-top:0;
                     }
